add hacky LV2 interop code (automatically generated by nclang).

--- a/lilv-sharp/Makefile
+++ b/lilv-sharp/Makefile
@@ -5,13 +5,22 @@ LV2_HEADERS = `find  /usr/lib/lv2/ -name *.h`
 
 
 all: lib
+	csc -debug -r:lilv-sharp.dll -out:lilv-sharp-sample.exe ../lilv-sharp-sample/Program.cs
 
 lib: generated-sources
-	# csc -debug -out:lv2-sharp.dll lv2-interop.cs -t:library -unsafe
+	csc -debug -out:lv2-sharp.dll lv2-interop.cs -t:library -unsafe
 	csc -debug -out:lilv-sharp.dll LilvSharp.cs lilv-interop.cs -t:library -unsafe
-	csc -debug -r:lilv-sharp.dll -out:lilv-sharp-sample.exe ../lilv-sharp-sample/Program.cs
 
 
 generated-sources:
-	# mono --debug $(NCLANG)/samples/PInvokeGenerator/bin/Debug/net462/PInvokeGenerator.exe --lib:lilv-0 --ns:Lv2Sharp.NativeInterop $(LV2_HEADERS) --match:lv2 --arg:"-Duint32_t=unsigned int"  > lv2-interop.cs
+	mono --debug $(NCLANG)/samples/PInvokeGenerator/bin/Debug/net462/PInvokeGenerator.exe --lib:lv2 --ns:Lv2Sharp.NativeInterop lv2_all.h --match:lv2 \
+		--arg:"-Dsize_t=void*" \
+		--arg:"-Dintptr_t=int*" \
+		--arg:"-Dint64_t=long" \
+		--arg:"-Dint32_t=int" \
+		--arg:"-Duint64_t=unsigned long" \
+		--arg:"-Duint32_t=unsigned int" \
+		--arg:"-Duint16_t=unsigned short" \
+		--arg:"-DLV2_URID=unsigned int" \
+		 > lv2-interop.cs
 	mono --debug $(NCLANG)/samples/PInvokeGenerator/bin/Debug/net462/PInvokeGenerator.exe --lib:lilv-0 --ns:LilvSharp.NativeInterop /usr/include/lilv-0/lilv/lilv.h --match:lv2 --match:lilv --arg:"-Duint32_t=unsigned int" --arg:"-DLV2_URID=unsigned int" > lilv-interop.cs
