--- a/lilv-sharp-sample/lilv-sharp-sample.csproj
+++ b/lilv-sharp-sample/lilv-sharp-sample.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>lilv_sharp_sample</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
