Fixed Feature marshalling issues and got urid mapping working.

--- a/lilv-sharp/Makefile
+++ b/lilv-sharp/Makefile
@@ -8,7 +8,7 @@ LV2_HEADERS = `find  /usr/lib/lv2/ -name *.h`
 
 
 all: lib
-	csc -debug -out:lilv-sharp.dll StronglyTypedLV2.cs LilvSharp.cs lilv-interop.cs lv2-interop.cs -t:library -unsafe
+	csc -debug:portable -out:lilv-sharp.dll StronglyTypedLV2.cs LilvSharp.cs lilv-interop.cs lv2-interop.cs -t:library -unsafe
 
 lib: tool
 	LD_LIBRARY_PATH=$(LD_LIBRARY_PATH) \
@@ -16,10 +16,10 @@ lib: tool
 	/usr/bin/mono --debug lilv-sharp-sample.exe generate > StronglyTypedLV2.cs
 
 tool: lib-bootstrap
-	csc -unsafe -debug -r:lilv-sharp.dll -out:lilv-sharp-sample.exe ../lilv-sharp-sample/Program.cs
+	csc -unsafe -debug:portable -r:lilv-sharp.dll -out:lilv-sharp-sample.exe ../lilv-sharp-sample/Program.cs
 
 lib-bootstrap: generated-sources
-	csc -debug -out:lilv-sharp.dll lv2-interop.cs LilvSharp.cs lilv-interop.cs -t:library -unsafe
+	csc -debug:portable -out:lilv-sharp.dll lv2-interop.cs LilvSharp.cs lilv-interop.cs -t:library -unsafe
 
 
 generated-sources:
